# autonomous-sailing-robot

./: .gitignore  LICENSE  README.md
launch/: asr.launch  simulation.launch  simulation_plotter_development.launch
notes/: BBB  pip-installations
src/boat_curr_heading/: CMakeLists.txt  package.xml  setup.py
src/boat_curr_heading/scripts/: publish_goal_heading
src/boat_curr_heading/src/boat_curr_heading/: goalHeading.py
src/boat_functions/: CMakeLists.txt  package.xml  setup.py
src/boat_functions/msg/: boat_3d.msg
src/boat_functions/scrips/: test_msgs
src/boat_functions/scripts/: test_functions
src/boat_functions/src/boat_functions/: led_control.py  store_data.py  test_printer.py
src/boat_functions/src/boat_functions/notbbio/: Servo.py  Wire2.py  __init__.py
src/boat_goal_heading/: CMakeLists.txt  package.xml  setup.py
src/boat_goal_heading/scripts/: publish_goal_heading
src/boat_gps/: CMakeLists.txt  package.xml  setup.py
src/boat_gps/scripts/: nmea_serial_driver  simulate_gps
src/boat_gps/src/boat_gps/: gps_serial.py
src/boat_imu/: CMakeLists.txt  package.xml  setup.py
src/boat_imu/msg/: measurements.msg
src/boat_imu/scripts/: calibrate_compass  compass  publish_imu  publish_imu.py  receive_imu.py  simulated_compass  simulated_imu  test  test_imu_receive  test_msg.py
src/boat_imu/src/boat_imu/: magnetometer.py  r_imu  read_imu.py  receive_imu.py
src/boat_mission_planner/: CMakeLists.txt  package.xml  setup.py
src/boat_mission_planner/scripts/: publish_waypoint
src/boat_oil_sensor/: CMakeLists.txt  package.xml  setup.py
src/boat_oil_sensor/scripts/: test_oil_sensor_functions
src/boat_oil_sensor/src/boat_oil_sensor/: test.py  testvalues.py
src/boat_path_planner/: CMakeLists.txt  package.xml  setup.py
src/boat_pid_control/: CMakeLists.txt  package.xml  setup.py
src/boat_pid_control/scripts/: pid_control.py  set_rudder
src/boat_pid_control/src/boat_pid_control/: pid_controller_class.py  rudderPID.py
src/boat_servo_rudder/: CMakeLists.txt  package.xml  setup.py
src/boat_servo_rudder/scripts/: set_rudder_servo
src/boat_servo_sail/: CMakeLists.txt  package.xml  setup.py
src/boat_servo_sail/scripts/: set_sail_length
src/boat_servo_sail/src/boat_servo_sail/: sail_angle.py  servo_adafruit.py  servo_control.py  servo_functions.py  servo_pyBBIO.py
src/boat_wind_sensor/: CMakeLists.txt  package.xml  setup.py
src/boat_wind_sensor/scripts/: publish_wind_dir
src/simulation/: CMakeLists.txt  package.xml  setup.py
src/simulation/scripts/: plotter
src/simulation/src/simulation/: .main.py.swp  main.py
