<?xml version="1.0"?>
<package>
  <name>boat_curr_heading</name>
  <version>0.0.1</version>
  <description>Package to estimate current heading 

  Goal:
  Estimate current heading of boat
  based on IMU measurements
  - simplest: magnetometer only (X, Y)
  - more accuracy includes gyro, accelerometer
  </description>

  <maintainer email="sms4g13@soton.ac.uk">smaria</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boat_functions</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>boat_functions</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>