<?xml version="1.0"?>
<package>
  <name>boat_imu</name>
  <version>0.0.1</version>
  <description>Package to publish boat IMU measurements

  Goal:
  Regular IMU measurement updates are published by this packet.
  </description>

  <maintainer email="sms4g13@soton.ac.uk">smaria</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
