<?xml version="1.0"?>
<package>
  <name>boat_mission_planner</name>
  <version>0.0.1</version>
  <description>Package to plan long term boat path
 
  Goal:
  The mission planner generates the overall planned path of the boat,
  consisting of several waypoints.
  The path is generated and changed based on radio input
  from other boats and mission control.
 </description>


  <maintainer email="sms4g13@soton.ac.uk">smaria</maintainer>
  <license>BSD</license>

 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boat_functions</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>boat_functions</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
