<?xml version="1.0"?>
<package>
  <name>boat_path_planner</name>
  <version>0.0.1</version>
  <description>Package to plan path for current waypoint 

  Goal:
  Plan heading demand  to reach current waypoint based on
  current waypoint and wind direction
  </description>

  <maintainer email="sms4g13@soton.ac.uk">smaria</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boat_functions</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>boat_functions</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>